--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,4 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> cobimr@protonmail.com
--->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,15 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
-    <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Justin Barbour | Product Manager</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="MBA, Leadership, Agile, Scrum, Lean, ROI, HTML, CSS, JavaScript, NodeJS, UX, UI, A/B Test, wireframe, SQL, databases, financial management, SEO, Accounting" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="[Justin Barbour] | Multi-talented product manager with 10+ years of leadership experience focusing on tech and full stack development" />
 
-    <!-- Required librarys -->
-    <link
+  
+   <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
@@ -35,20 +24,18 @@
     </script>
 
     <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+  
   </head>
 
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
-    <!-- **** Hero Section **** -->
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, I'm <span class="text-color-main">Justin.</span>
           <br />
-          I'm the Unknown Developer.
+          Welcome to my portfolio site.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -70,7 +57,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/Prof Picture .jpg"
                 alt="Profile Image"
               />
             </div>
@@ -78,19 +65,13 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                I started my career in the hospitality industry as a chef and restaurateur where I quickly honed my management style, learning how to support teams both remotely and shoulder-to-shoulder. This start cultivated a deep understanding of perfecting small details while never losing the macro perspective of a product. 
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                Finding my passion in people and marketing, I finished my master’s in business while working as an affiliate professor. It’s here I developed my abilities to instruct, guide, and lead large groups. After finishing my MBA, I narrowed my focus to program and department manager roles, learning to work strategically and cross-functionally. The various management roles I’ve held has led me to finding my passion in technical product management, a field that allows me to utilize my uniquely varied career. 
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1Zp8RZiIM9d1EZ7Km7dMLPkOmK8PWnpVP/view?usp=sharing">
                   View Resume
                 </a>
               </span>
@@ -106,27 +87,27 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">
-            Projects
+            Portfolio and Projects
           </h2>
 
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">YelpCamp</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    YelpCamp is a functioning fake website project using authentication, authorization, databases, 
+                    Express, EJS, Mongoose, and Passport. It is written in NodeJS and hosted on Heroku. 
+                  </p>
+                  <p>
+                    Feel free to sign up, add a comment, or add a campsite!
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://shielded-stream-16725.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/justinmba/YelpCamp">
                   Source Code
                 </a>
               </div>
@@ -135,7 +116,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/CodingPhoto.jpeg" />
                   </div>
                 </a>
               </div>
@@ -223,13 +204,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            I look forward to hearing from you! 
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:jbarbourmba@gmail.com"
+            >jbarbourmba@gmail.com</a
           >
         </div>
       </div>
