--- a/src/template.html
+++ b/src/template.html
@@ -33,7 +33,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, I'm <span class="text-color-main">Justin.</span>
+          Hi, I'm <span class="text-color-main">Justin</span>
           <br />
           Welcome to my portfolio site.
         </h1>
@@ -57,7 +57,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/Prof Picture .jpg"
+                src="./assets/portfolioimage.jpg"
                 alt="Profile Image"
               />
             </div>
