--- a/src/template.html
+++ b/src/template.html
@@ -57,7 +57,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/portfolioimage.jpg"
+                src="./assets/portimagepng.png"
                 alt="Profile Image"
               />
             </div>
