--- a/src/template.html
+++ b/src/template.html
@@ -94,14 +94,14 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">YelpCamp</h3>
+                <h3 class="project-wrapper__text-title">Web Development</h3>
                 <div>
                   <p class="mb-4">
-                    YelpCamp is a functioning fake website project using authentication, authorization, databases, 
-                    Express, EJS, Mongoose, and Passport. It is written in NodeJS and hosted on Heroku. 
+                    YelpCamp is a functioning fake website project written from scratch in NodeJS, hosted on Heroku, and using a Mongoose database. 
+                    the webpage utilizes authentication and authorization with Passport, linked databases, Express, and basic HTML, CSS, and JavaScript.
                   </p>
                   <p>
-                    Feel free to sign up, add a comment, or add a campsite!
+                    Feel free to sign up and add a comment and a campsite!
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shielded-stream-16725.herokuapp.com/">
@@ -128,14 +128,11 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">UX/UI Audits</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Saas product audits set against Nielson's heuresitcs and conversion metrics. 
+                    They entail empathy maps, wireframes, usability, and API integration. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
@@ -195,6 +192,44 @@
       </div>
     </section>
     <!-- /END Projects Section -->
+
+    <!-- Each .row is a project -->
+    <div class="row">
+      <div class="col-lg-4 col-sm-12">
+        <div class="project-wrapper__text">
+          <h3 class="project-wrapper__text-title">Project Title</h3>
+          <div>
+            <p class="mb-4">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Excepturi neque, ipsa animi maiores repellendus distinctio
+              aperiam earum dolor voluptatum consequatur blanditiis
+              inventore debitis fuga numquam voluptate ex architecto
+              itaque molestiae.
+            </p>
+          </div>
+          <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+            See Live
+          </a>
+          <a target="_blank" class="cta-btn text-color-main" href="#!">
+            Source Code
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-8 col-sm-12">
+        <div class="project-wrapper__image">
+          <a href="#!" target="_blank">
+            <div data-tilt class="thumbnail rounded">
+              <img class="img-fluid" src="./assets/project.jpg" />
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- /END Project -->
+  </div>
+</div>
+</section>
+<!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
     <section id="contact">
