--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
-    <title>Justin Barbour | Product Manager</title>
+    <title>Justin Barbour | Portfolio</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="MBA, Leadership, Agile, Scrum, Lean, ROI, HTML, CSS, JavaScript, NodeJS, UX, UI, A/B Test, wireframe, SQL, databases, financial management, SEO, Accounting" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -22,8 +22,6 @@
     <script>
       ScrollReveal({ reset: false });
     </script>
-
-    <!-- Remove this script once you setup your custom portfolio -->
   
   </head>
 
@@ -33,18 +31,16 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, I'm <span class="text-color-main">Justin</span>
+          Hi, my name is <span class="text-color-main">Justin Barbour</span>
           <br />
-          Welcome to my portfolio site.
+          Welcome to my portfolio site
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" href="#about">About Me</a>
         </p>
       </div>
     </div>
-    <!-- /END Hero Section -->
 
-    <!-- **** About Section **** -->
     <section id="about">
       <div class="container">
         <h2 class="section-title">
@@ -80,24 +76,24 @@
         </div>
       </div>
     </section>
-    <!-- /END About Section -->
 
-    <!-- **** Projects Section **** -->
+
+
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">
-            Portfolio and Projects
+            Projects and Portfolio
           </h2>
 
-          <!-- Each .row is a project -->
+
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Web Development</h3>
                 <div>
                   <p class="mb-4">
-                    YelpCamp is a functioning fake website project written from scratch in NodeJS, hosted on Heroku, and using a Mongoose database. 
+                    YelpCamp is a functioning fake website project written from scratch in NodeJS, hosted on Heroku, and using a relational database through Mongoose. 
                     the webpage utilizes authentication and authorization with Passport, linked databases, Express, and basic HTML, CSS, and JavaScript.
                   </p>
                   <p>
@@ -122,9 +118,9 @@
               </div>
             </div>
           </div>
-          <!-- /END Project -->
 
-          <!-- Each .row is a project -->
+
+
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -134,46 +130,12 @@
                     Saas product audits set against Nielson's heuresitcs and conversion metrics. 
                     They entail empathy maps, wireframes, usability, and API integration. 
                   </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                  <p>
+                    This also includes a decade of experience in go-to-market and monetization strategies, market evaluations, and organizational roadmaps. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
+                  Sample Audit
                 </a>
               </div>
             </div>
@@ -181,57 +143,48 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/UX.png" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+  
+
+    
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Project Management</h3>
+                <div>
+                  <p class="mb-4">
+                    With Eurest Compass I opened several multi-million dollar accounts throughout colorado, notably Davita Headquarters. These entailed:</p> 
+                    <p> 
+                    Stakeholder management and presentations, financial planning and budgeting, process management and agile methodologies, 
+                    product marketing, team leadership, and direct oversight of management teams. 
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://www.eurest-usa.com/">
+                  Eurest
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/Davita.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+ 
         </div>
       </div>
     </section>
-    <!-- /END Projects Section -->
 
-    <!-- Each .row is a project -->
-    <div class="row">
-      <div class="col-lg-4 col-sm-12">
-        <div class="project-wrapper__text">
-          <h3 class="project-wrapper__text-title">Project Title</h3>
-          <div>
-            <p class="mb-4">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Excepturi neque, ipsa animi maiores repellendus distinctio
-              aperiam earum dolor voluptatum consequatur blanditiis
-              inventore debitis fuga numquam voluptate ex architecto
-              itaque molestiae.
-            </p>
-          </div>
-          <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-            See Live
-          </a>
-          <a target="_blank" class="cta-btn text-color-main" href="#!">
-            Source Code
-          </a>
-        </div>
-      </div>
-      <div class="col-lg-8 col-sm-12">
-        <div class="project-wrapper__image">
-          <a href="#!" target="_blank">
-            <div data-tilt class="thumbnail rounded">
-              <img class="img-fluid" src="./assets/project.jpg" />
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-    <!-- /END Project -->
-  </div>
-</div>
-</section>
-<!-- /END Projects Section -->
 
-    <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
         <h2 class="section-title">
@@ -250,60 +203,32 @@
         </div>
       </div>
     </section>
-    <!-- /END Contact Section -->
 
-    <!-- **** Footer Section **** -->
+
+
     <footer class="footer navbar-static-bottom">
       <div class="container">
         <a href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/justinmba/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/justinmba" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
 
         <hr />
 
-        <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
-          </a>
+          Website outline developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          </a> and refactored by <a href="https://github.com/justinmba" target="_blank">Justin Barbour</a>
+        </a>
         </p>
 
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
-    <!-- /END Footer Section -->
   </body>
 </html>
