--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,7 @@
     </script>
   
   </head>
-
+<!-- Hello Friend, welcome to my portfolio!! The fact that you're looking at this means that you're looking at my code. Let me know if you have any suggestions! -->
   <body>
     <div id="top"></div>
 
