--- a/src/template.html
+++ b/src/template.html
@@ -133,7 +133,7 @@
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  Sample Audit
+                  Sample Audit - Coming Soon!
                 </a>
               </div>
             </div>
