--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="https://sung.codes/static/ac36f68541dcdb1d16704ad37d7a4834/6fae7/featured-image-1.webp">
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <title>Justin Barbour | Portfolio</title>
