--- a/src/template.html
+++ b/src/template.html
@@ -136,8 +136,8 @@
                     This also includes a decade of experience in go-to-market and monetization strategies, market evaluations, and organizational roadmaps. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  Sample Audit - Coming Soon!
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1xw5Luc848-ArlbGQH9mQzIYaADDcQrFJ/view?usp=sharing">
+                  Sample Audit - SurveyGizmo
                 </a>
               </div>
             </div>
