--- a/src/template.html
+++ b/src/template.html
@@ -145,7 +145,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/UX.png" />
+                    <img class="img-fluid" src="./assets/Audit.png" />
                   </div>
                 </a>
               </div>
