--- a/src/template.html
+++ b/src/template.html
@@ -143,7 +143,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://drive.google.com/file/d/1xw5Luc848-ArlbGQH9mQzIYaADDcQrFJ/view?usp=sharing" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/Audit.png" />
                   </div>
