Business Plan Add

--- a/src/template.html
+++ b/src/template.html
@@ -90,6 +90,7 @@
             Projects and Portfolio
           </h2>
 
+<!-- Yelp Camp -->
 
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -123,6 +124,7 @@
             </div>
           </div>
 
+<!--UX Audit-->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -151,7 +153,41 @@
               </div>
             </div>
           </div>
-  
+
+<!--Product Design-->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Product Design and Analysis</h3>
+                <div>
+                  <p class="mb-4">
+                    Business plan and executive summary of product launch, Buddha Bowl.  
+                    This includes indepth analysis of industry trentds, competivie advantage, target markets, strategic positioning, monetization strategy, and 5 years of financials.
+                  </p>
+                  <p>
+                    Investor pitch deck includes user stories, business model, and exit strategies. 
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/0B4NOsxqOtxJ-TDZlbkFYOE5mSzA/view?usp=sharing">
+                  Business Plan
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://drive.google.com/file/d/0B_x8cxVJf6nIdXRpMkRXaFdxN28/view?usp=sharing">
+                  Investor Pitch Deck
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://drive.google.com/file/d/1xw5Luc848-ArlbGQH9mQzIYaADDcQrFJ/view?usp=sharing" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/BB Logo.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+  <!--UX Audit-->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
