--- a/src/template.html
+++ b/src/template.html
@@ -178,16 +178,16 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://drive.google.com/file/d/1xw5Luc848-ArlbGQH9mQzIYaADDcQrFJ/view?usp=sharing" target="_blank">
+                <a href="https://drive.google.com/file/d/0B4NOsxqOtxJ-TDZlbkFYOE5mSzA/view?usp=sharing" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/BB Logo.png" />
+                    <img class="img-fluid" src="./assets/BBlogo.png" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
 
-  <!--UX Audit-->
+  <!--Eurest-->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
