profile image and link

--- a/src/template.html
+++ b/src/template.html
@@ -53,6 +53,7 @@
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image">
+              <a href="https://drive.google.com/file/d/1Zp8RZiIM9d1EZ7Km7dMLPkOmK8PWnpVP/view?usp=sharing" target="_blank"></a>
               <img
                 class="img-fluid rounded shadow-lg"
                 height="auto"
@@ -158,7 +159,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Product Design and Analysis</h3>
+                <h3 class="project-wrapper__text-title">Product Design</h3>
                 <div>
                   <p class="mb-4">
                     Business plan and executive summary of product launch, Buddha Bowl.  
