--- a/src/template.html
+++ b/src/template.html
@@ -91,6 +91,39 @@
             Projects and Portfolio
           </h2>
 
+          <!-- VMenu -->
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Product Launch</h3>
+                <div>
+                  <p class="mb-4">
+                    VMenu is an interactive virtual menu database for all of your local restaurants. It allows users to save favorites, scan QR codes, and share menus with friends. 
+                  </p>
+                  <p>
+                    VMenu was taken from inception to an MVP beta launch. This includes a fully functioning prototype, over 100 beta users, A/B tests, user interviews, and acceptance criteria.   
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://www.thevmenu.com/comingsoon">
+                  Launch Page
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://www.linkedin.com/company/thevmenu/">
+                  Company LinkedIn
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://www.thevmenu.com/comingsoon" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/vmenu.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
 <!-- Yelp Camp -->
 
           <div class="row">
