updated about me and resume

--- a/src/template.html
+++ b/src/template.html
@@ -66,10 +66,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I started my career in the hospitality industry as a chef and restaurateur where I quickly honed my management style, learning how to support teams both remotely and shoulder-to-shoulder. This start cultivated a deep understanding of perfecting small details while never losing the macro perspective of a product. 
+                Founding a small startup is like being a product manager on steroids. Instead of cross-communicating between teams, you are most, if not all, of the teams. However, this unique insight has given me deep understandings of every part of a product launch. From competitive and market analysis, to in-depth features tables, to user interviews and A/B tests, to MVP experiments, to the small intricacies of building and coding a prototype. Finding yourself with limited resources forces ingenuity and creativity, something I carry to every role I’m in.
               </p>
               <p class="about-wrapper__info-text">
-                Finding my passion in people and marketing, I finished my master’s in business while working as an affiliate professor. It’s here I developed my abilities to instruct, guide, and lead large groups. After finishing my MBA, I narrowed my focus to program and department manager roles, learning to work strategically and cross-functionally. The various management roles I’ve held has led me to finding my passion in technical product management, a field that allows me to utilize my uniquely varied career. 
+                Before VMenu, I finished my master’s in business while working as an affiliate professor. It’s here I developed my abilities to instruct, guide, and mentor large groups. After finishing my MBA, I narrowed my focus to program and project manager roles, learning to work strategically and cross-functionally. Finding my passion in technical product owner and management has allowed me to utilize my unique background and skills while continually growing and evolving.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1Zp8RZiIM9d1EZ7Km7dMLPkOmK8PWnpVP/view?usp=sharing">
@@ -102,7 +102,7 @@
                     VMenu is an interactive virtual menu database for all of your local restaurants. It allows users to save favorites, scan QR codes, and share menus with friends. 
                   </p>
                   <p>
-                    VMenu was taken from inception to an MVP beta launch. This includes a fully functioning prototype, over 100 beta users, A/B tests, user interviews, and acceptance criteria.   
+                    VMenu was taken from inception to an MVP beta launch. This includes a fully functioning prototype, over 100 beta users, market analysis, A/B tests, user interviews, and defining acceptance criteria.   
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://www.thevmenu.com/comingsoon">
